# webtronics

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  setup.cfg
data/: config.py  database.py  db_config.py  models.py  settings.py
docker/: app.sh
migrations/: env.py
migrations/versions/: 1aec4cb63584_.py  2dd8a1a2521a_.py  45577501ce87_.py  722340cb0483_.py  cf973f5f13e8_.py  e6d0c2534d2d_.py
posts/: constants.py  db_commands.py  func.py  models.py  router.py  schemas.py
users/: auth.py  constants.py  models.py  router.py  schemas.py
